# Computational-mathematics

./: CMakeLists.txt
task1/: CMakeLists.txt  task1_main.cpp
task2/: CMakeLists.txt  Makefile  plot.py  spline.cpp  spline.sh  task1.cpp  task1.sh  task2_main.cpp
